--- a/codingfactory/src/main/resources/application.properties
+++ b/codingfactory/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 server.port=8081
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jackson.serialization.fail-on-empty-beans=false
