--- a/codingfactory/src/main/resources/application.properties
+++ b/codingfactory/src/main/resources/application.properties
@@ -1,12 +1,27 @@
-spring.application.name=codingfactory
-# spring.datasource.url=jdbc:postgresql://ep-aged-sea-a8rs5h7s-pooler.eastus2.azure.neon.tech:5432/neondb
-# spring.datasource.username=neondb_owner
-# spring.datasource.password=npg_ISTkUQJY5ro1
-spring.datasource.url=jdbc:postgresql://localhost:5432/codingFactory
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.application.name=forum
+spring.cloud.config.import-check.enabled=false
+spring.cloud.config.fail-fast=true
+# spring.datasource.url=jdbc:postgresql://localhost:5432/codingFactory
+# spring.datasource.username=postgres
+# spring.datasource.password=admin
+
+spring.datasource.url=jdbc:postgresql://ep-broad-bonus-a4an2psr-pooler.us-east-1.aws.neon.tech:5432/pidev_codingFactory?sslmode=require
+spring.datasource.username=pidev_codingFactory_owner
+spring.datasource.password=npg_drmDh51HjnNx
+
+
 server.port=8081
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jackson.serialization.fail-on-empty-beans=false
+
+
+
+#eureka config
+eureka.client.register-with-eureka=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+# # Add these to enable AMQP features
+# spring.rabbitmq.listener.simple.auto-startup=true
+# spring.rabbitmq.listener.direct.auto-startup=true
