--- a/codingfactory/src/main/resources/application.properties
+++ b/codingfactory/src/main/resources/application.properties
@@ -19,8 +19,8 @@ spring.jackson.serialization.fail-on-empty-beans=false
 
 
 #eureka config
-eureka.client.register-with-eureka=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+#eureka.client.register-with-eureka=true
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 # # Add these to enable AMQP features
 # spring.rabbitmq.listener.simple.auto-startup=true
